--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,8 @@ name: Daily Scraping Workflow
 
 on:
   schedule:
-    # Runs at 1:15 AM UTC every day
     - cron: '15 1 * * *'
-  workflow_dispatch:  # This line adds the manual trigger
+  workflow_dispatch:
 
 jobs:
   scrape:
@@ -16,7 +15,24 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x' # Replace '3.x' with the specific version if needed
+          python-version: '3.x'
+      
+      - name: Install Chrome and ChromeDriver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxss1 libappindicator1 libindicator7
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome*.deb
+          sudo apt-get install -y -f
+          sudo rm google-chrome*.deb
+          CHROME_VERSION=$(google-chrome --version | cut -f 3 -d ' ' | cut -d '.' -f 1)
+          DRIVERVERSION=$(wget -qO- "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
+          wget -N http://chromedriver.storage.googleapis.com/$DRIVERVERSION/chromedriver_linux64.zip -P ~/
+          unzip ~/chromedriver_linux64.zip -d ~/
+          rm ~/chromedriver_linux64.zip
+          sudo mv -f ~/chromedriver /usr/local/bin/chromedriver
+          sudo chmod 0755 /usr/local/bin/chromedriver
+          chromedriver --version
 
       - name: Install dependencies
         run: |
@@ -24,6 +40,7 @@ jobs:
           pip install pandas # Add other dependencies if needed
 
       - name: Run scraping script
-        run: python pre_processing.py # Or use the path to your script if it's in a different directory
-
-      # Add additional steps if you need to process and commit files back to the repository
+        env:
+          PYTHONUNBUFFERED: 1
+        run: |
+          python pre_processing.py
