--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libxss1 libappindicator1 libindicator7
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo dpkg -i google-chrome*.deb
-          sudo apt-get install -y -f
+          sudo dpkg -i google-chrome*.deb; sudo apt-get install -y -f || exit 0
           sudo rm google-chrome*.deb
           CHROME_VERSION=$(google-chrome --version | cut -f 3 -d ' ' | cut -d '.' -f 1)
           DRIVERVERSION=$(wget -qO- "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
@@ -44,3 +43,4 @@ jobs:
           PYTHONUNBUFFERED: 1
         run: |
           python pre_processing.py
+        # Note: Your pre_processing.py script needs to be adjusted to use Chrome in headless mode
