--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Daily Scraping Workflow
 on:
-  schedule:
+#  schedule:
     # Runs at 1:15 AM UTC every day
-    - cron: '15 1 * * *'
+#    - cron: '15 1 * * *'
   workflow_dispatch:  # This line adds the manual trigger
 
 jobs:
